@@ -104,6 +104,9 @@
 [seaking_server_1.0.0.1 2013-11-01 张春生]
 1、新功能：调整竞技场功能
 
+[seaking_server_1.0.0.1 2013-11-06 张春生]
+1、新功能：增加战报功能
+
 --备注分类
 1、新功能：
 2、Bug:
